@@ -18,9 +18,6 @@ remove items from this list once they are complete.
 * <junitreport> and JDK 1.5 [Stefan hopes that Stephane solves it for
   him, otherwise he'll do it himself]
 
-* telnet doesn't disconnect properly (PR 25935) [Stefan unless Peter
-  is faster].
-
 * AntClassLoader parent loader [Start thread, Peter]
 
 * delete - do not follow symlinks [Peter, may be dropped for 1.6.2]
